--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><body><player> </player><script type="text/javascript" src="app.bundle.js"></script></body>
+<!DOCTYPE html><body><player> </player><script type="text/javascript" src="./app.bundle.js"></script></body>
